@@ -16,6 +16,14 @@ function isHapiIncompat (moduleName) {
   if (semver.lt(process.version, '12.0.0') && semver.gte(hapiVersion, '19.0.0')) {
     return true
   }
+  // - hapi 18.1.0 (the last hapi 18.x) was released before node v12 was released,
+  //   and tests with hapi@18 and node >=16 is known to hang.
+  // - @hapi/hapi@20.1.2 fixed an issue (https://github.com/hapijs/hapi/pull/4225)
+  //   need to work with node >=16. Earlier versions of Hapi will crash when
+  //   handling a POST.
+  if (semver.gte(process.version, '16.0.0') && semver.lt(hapiVersion, '20.1.2')) {
+    return true
+  }
 
   // hapi does not work on early versions of Node.js 10 because of
   // https://github.com/nodejs/node/issues/20516
